# tflite_beam

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.win  README.md  coveralls.json  mix.exs  precompiled_deploy.exs  rebar.config  tflite_beam_precompiled.erl
.github/workflows/: autoupdate-metadata_schema.yml  linux-precompile.yml  linux-precompiled.yml  linux-x86_64.yml  macos-arm64.yml  macos-precompile.yml  macos-x86_64.yml  nerves-build.yml  windows-x86_64.yml
c_src/: bindings.cpp  erlang_nif_resource.cpp  erlang_nif_resource.h  erlang_nif_resource.hpp  helper.cpp  helper.h  metadata_schema_generated.h  nif_utils.cpp  nif_utils.hpp  tflite_interpreter.h  tflite_interpreter_builder.h
c_src/coral/: coral.cpp  coral.h
c_src/tflite/: error_reporter.cpp  error_reporter.h  flatbuffer_model.cpp  flatbuffer_model.h  interpreter.cpp  interpreter.h  interpreter_builder.cpp  interpreter_builder.h  metadata.cpp  metadata.h  status.cpp  tflite.cpp  tflite.h  tflite_flatbuffermodel.h  tflite_interpreter.cpp  tflite_interpreter.h  tflite_interpreter_builder.cpp  tflite_interpreter_builder.h  tflite_ops_builtin_builtinresolver.cpp  tflite_ops_builtin_builtinresolver.h  tflite_status.cpp  tflite_status.h  tflite_tflitetensor.cpp  tflite_tflitetensor.h  tflitetensor.cpp  tflitetensor.h  verifier.h
c_src/tflite/ops/builtin/: builtin_resolver.cpp  builtin_resolver.h
cc_toolchain/: armv6-nerves-linux-gnueabihf.cmake  armv6-nerves-linux-guneabihf.cmake  armv7l-linux-gnueabihf.cmake  linux-aarch64.cmake  linux-armv7l.cmake  riscv64-nerves-linux-gnu.cmake
config/: config.exs
examples/: README.md  artistic_style_transfer.livemd  audio_classification.livemd  object_detection.livemd  pose_estimation.livemd  super_resolution.livemd  tflite_benchmark_densenet.livemd  tpu.livemd
lib/: coral_elixir.ex  errorize.ex  tflite_beam_nif.ex  tflite_elixir.ex  tflite_elixir_nif.ex  tflite_flatbuffermodel.ex  tflite_interpreter.ex  tflite_interpreter_builder.ex  tflite_quantization_params.ex  tflite_tensor.ex
lib/ops/builtin/: builtin_op_resolver.ex
lib/tasks/: classify_image.ex  detect_image.ex  list_edgetpu.ex
lib/tflite_beam/: basic_tokenizer.ex  coral.ex  error_reporter.ex  errorize.ex  flatbuffer_model.ex  interpreter.ex  interpreter_builder.ex  quantization_params.ex  tflite_tensor.ex
lib/tflite_beam/Tokenizer/: basic_tokenizer.ex  full_tokenizer.ex  wordpiece_tokenizer.ex
lib/tflite_beam/high-level-api/: classify_image.ex
lib/tflite_beam/ops/builtin/: builtin_resolver.ex
lib/tflite_elixir/: coral.ex  error_reporter.ex  flat_buffer_model.ex  flatbuffer_model.ex  interpreter.ex  interpreter_builder.ex  quantization_params.ex  tflite_tensor.ex
lib/tflite_elixir/high-level/: classify_image.ex
lib/tflite_elixir/ops/builtin/: builtin_op_resolver.ex  builtin_resolver.ex
patches/: apply_patch.py
scripts/: build_libusb.sh  copy_libedgetpu_runtime.sh  linux_fix_edgetpu_version.sh  macos_fix_libusb.sh  macos_libusb_rpath.sh  macos_postbuild_fix_libedgetpu.sh  postbuild_fix_libedgetpu.sh
src/: tflite_beam.app.src
src/tflite_beam/: tflite_beam_basic_tokenizer.erl  tflite_beam_coral.erl  tflite_beam_error_reporter.erl  tflite_beam_flatbuffer_model.erl  tflite_beam_full_tokenizer.erl  tflite_beam_interpreter.erl  tflite_beam_interpreter_builder.erl  tflite_beam_nif.erl  tflite_beam_ops_builtin_builtin_resolver.erl  tflite_beam_private_utils_unicode_data.erl  tflite_beam_records.hrl  tflite_beam_tensor.erl
src/tflite_beam/contrib/: tflite_beam_contrib_huggingface.erl
src/tflite_beam/tokenizer/: tflite_beam_basic_tokenizer.erl  tflite_beam_full_tokenizer.erl  tflite_beam_wordpiece_tokenizer.erl
src/tflite_beam/utils/: tflite_beam_utils_downloader.erl
test/: basic_tokenizer_test.exs  builtin_resolver_test.exs  error_reporter_test.exs  flatbuffter_model_test.exs  full_tokenizer_test.exs  high_level_image_classification_test.exs  interpreter_builder_test.exs  interpreter_test.exs  test_helper.exs  tflite_elixir_test.exs  tflite_task_classify_image_test.exs  tflite_task_detect_image_test.exs  tflitetensor_test.exs  wordpiece_tokenizer_test.exs
